--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 aiohttp==3.8.4
 aiosignal==1.3.1
-apturl>=0.4.2
+apturl==0.5.2
 async-timeout==4.0.2
 attrs==23.1.0
 Babel==2.8.0
@@ -8,6 +8,7 @@ bcrypt==3.2.0
 blinker==1.4
 Brlapi==0.8.3
 certifi==2020.6.20
+cffi==1.15.1
 chardet==4.0.0
 charset-normalizer==3.1.0
 chrome-gnome-shell==0.0.0
@@ -18,6 +19,8 @@ cryptography==3.4.8
 cupshelpers==1.0
 dbus-python==1.2.18
 defer==1.0.6
+discord-interactions==0.4.0
+discord-py-interactions==5.6.0
 discord-py-slash-command==4.2.1
 discord-typings==0.6.0
 discord.py==2.2.3
@@ -64,6 +67,7 @@ protonvpn-nm-lib==3.14.0
 psutil==5.9.0
 ptyprocess==0.7.0
 pycairo==1.20.1
+pycparser==2.21
 pycryptodomex==3.11.0
 pycups==2.0.1
 PyGObject==3.42.1
